--- a/index.html
+++ b/index.html
@@ -1,42 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Questinarie</title>
-     <link rel="./index.css"
-
+  <title>Basic Web Page</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" >
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-      <div>
-       <ul>
-          <li>
-               <h2>Home</h2>
-          </li>
-          <li>
-               <h2>About</h2>
-          </li>
-          <li>
-               <h2>More</h2>
-          </li>
-          <li>
-               <h2>Results</h2>
-          </li>
-          <li>
-               <h2>Questions</h2>
-          </li>
-       </ul>
-      </div>
-      <div>
-          <img src="./resourcess/images/Research Progress.jpeg alt="What is your personality?">
-      </div>
+  <header class=top-menu>
+    <nav>
+     <row>About</row> 
+     <row>More</row>
+     <row>Follow</row>
+     </nav>
+  </header>
+
+  <div>
+  <img src="https://i.pinimg.com/564x/4f/25/8d/4f258d6928bf02a872e5e78f18309667.jpg alt=What is your personality">
+  </div>
       <div>
           <header>Welcome to our personality test</header>
           <p>Get to know your persnoality. What is your type and group? Know your wicknesess and strengths. Your potential and abilities.
           </p>
       </div>
       <div>
-           <h4>Question N1</h3>
+           <h4>Question N1</h4>
            <p>It is easy for me to make new frineds</p>
  
           <div>
@@ -71,6 +58,7 @@
            <h4>Question N3</h4>
            <p>I prefer active sports rather than reading a book</p>
       </div>
+      <div>
 
            <div>
            <h3>Yes</h3>
@@ -84,6 +72,9 @@
            <h3>Neutral</h3>
            </div>
       </div>
+
+</body>
+</html>
 
 </body>
 </html>
