--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <title>COFFEE BEANS</title>
 </head>
 <body>
-     <div>
+     <div class="background-iamge>
      <img src="https://images.unsplash.com/photo-1447933601403-0c6688de566e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y29mZmVlJTIwYmVhbnxlbnwwfHwwfHx8MA%3D%3D" alt="cup of coffee">
      </div>
      <div>
