--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>kG</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" >
+  <link href="style.css" rel="stylesheet">
+</head>
+<body>
+  <div class="navigation">
+    <ul>
+      <div class="left">
+      <li class="kg">Kyrgyzstan</li>
+      </div>
+      <div class="right">
+      <li>About</li>
+      <li>Home</li>
+      <li>Tour</li>
+      </div>
+       </ul>
+  </div>
+  </body>
+</html>
