--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <title>kG</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" >
-  <link href="style.css" rel="stylesheet">
+  <link href="index.css" rel="stylesheet">
 </head>
 <body>
+  <!--navigation-bar-->
   <div class="navigation">
     <ul>
       <div class="left">
@@ -17,6 +18,17 @@
       <li>Tour</li>
       </div>
        </ul>
+   </div>
+    <!--banner-image-->
+  <div class="image-banner">
+    <div class="photo-yurt">
+     <!--<img src="resources/images/IMG_3667.JPG" alt="yurt">-->
+     <p>this is a yurta</p>
+    </div>
+   <div class="photo-mountain">
+    <!--<img src="resources/images/IMG_3690.JPG" alt="mountain-view">-->
+    <p>this is a mountain</p>
+   </div> 
   </div>
   </body>
 </html>
