--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>kG</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" >
   <link href="index.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Titan+One&display=swap" rel="stylesheet">
 </head>
 <body>
   <!--navigation-bar-->
@@ -22,12 +25,10 @@
     <!--banner-image-->
   <div class="image-banner">
     <div class="photo-yurt">
-     <!--<img src="resources/images/IMG_3667.JPG" alt="yurt">-->
-     <p>this is a yurta</p>
+     <h1 class="photo-left">a nation through centuries </h1>
     </div>
    <div class="photo-mountain">
-    <!--<img src="resources/images/IMG_3690.JPG" alt="mountain-view">-->
-    <p>this is a mountain</p>
+    <h1 class="photo-right">mountains to the sky</h1>
    </div> 
   </div>
   </body>
