--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" >
   <link href="index.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Titan+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Titan+One&display=swap" rel="stylesheet">
 </head>
 <body>
   <!--navigation-bar-->
@@ -31,5 +31,34 @@
     <h1 class="photo-right">mountains to the sky</h1>
    </div> 
   </div>
+  <!--main-section-->
+  <main>
+    <header>
+    <h1>Kyrgyzstan</h1>
+      <p>Explore the beauty and culture of Central Asia's hidden gem.</p>
+    </header>
+    <!--images section-->
+    <section class="scrollable-images">
+      <div>
+        <img src="resources/images/KGPHOTO.JPG" alt="horses">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_4343 copy.JPG" alt="mountain-lake">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_4206 copy.JPG" alt="hight-mountain">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_3689 copy.JPG" alt="another-high-mountain">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_8511 copy.JPG" alt="night-mountain">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_9376 copy.JPG" alt="brown-mountain">
+      </div>
+
+    </section>
+  </main>
   </body>
 </html>
