--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     </header>
     <!--images section-->
     <section class="scrollable-images">
-      <div>
+      <div class="image-section">
+      <div class="horses-img">
         <img src="resources/images/KGPHOTO.JPG" alt="horses">
       </div>
       <div>
@@ -57,8 +58,63 @@
       <div>
         <img src="resources/images/image-section/IMG_9376 copy.JPG" alt="brown-mountain">
       </div>
+      <div>
+        <img src="resources/images/image-section/IMG_4200 copy.JPG" alt="a-house">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_8381 copy.JPG" alt="factory">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_6290 (1) copy.jpg" alt="lake">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_6225 copy.JPG" alt="horn">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_5012-01 copy.jpeg" alt="path">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_3671 copy.JPG" alt="a-man">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_3257 copy.JPG" alt="issyk-kul">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_3258 copy.JPG" alt="pier">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_3255 copy.JPG" alt="swan">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_0743.JPG" alt="autmn-lake">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_2885 copy.JPG" alt="truck">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_3978 copy.jpg" alt="fog">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_3668 copy.JPG" alt="flock">
+      </div>
+      <div>
+        <img src="resources/images/Kyrgyzstan-Mountain-HD-Wallpapers-86429.jpg" alt="meadow">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_0710.JPG" alt="trees">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_3130.JPG" alt="manas-stree">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_8174 copy.JPG" alt="night-bishkek">
+      </div>
+      <div>
+        <img src="resources/images/image-section/IMG_8173 copy.JPG" alt="bishke-park">
+      </div>
+    </div>
 
     </section>
   </main>
   </body>
-</html>
+</html>>
