--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
       <div class="left">
       <li class="kg">Kyrgyzstan</li>
+      <li>Contact us</li>
       </div>
       <div class="right">
       <li>About</li>
@@ -36,13 +37,11 @@
     <header>
     <h1>Kyrgyzstan</h1>
       <p>Explore the beauty and culture of Central Asia's hidden gem.</p>
+      <p id="scroll-right">scroll >>></p>
     </header>
     <!--images section-->
     <section class="scrollable-images">
       <div class="image-section">
-      <div class="horses-img">
-        <img src="resources/images/KGPHOTO.JPG" alt="horses">
-      </div>
       <div>
         <img src="resources/images/image-section/IMG_4343 copy.JPG" alt="mountain-lake">
       </div>
@@ -113,7 +112,23 @@
         <img src="resources/images/image-section/IMG_8173 copy.JPG" alt="bishke-park">
       </div>
     </div>
+    </section>
 
+    <!--Top destinations section-->
+    <section>
+      <h2>Top destinations</h2>
+      <div class="destinations">
+       <ul>
+        <div id="bishkek-city-img">
+        <li>Bishkek:</li>
+        <img src="resources/images/IMG_3142.JPG" alt="Bishkek-city">
+      </div>
+        <li>Issyk-Kul Lake:</li>
+        <li>Ala-Archa National Park</li>
+        <li>Song-Kul Lake:</li>
+        <li>Osh</li>
+       </ul>
+    </div>
     </section>
   </main>
   </body>
