--- a/index.html
+++ b/index.html
@@ -119,9 +119,14 @@
       <h2>Top destinations</h2>
       <div class="destinations">
        <ul>
-        <div id="bishkek-city-img">
-        <li>Bishkek:</li>
-        <img src="resources/images/IMG_3142.JPG" alt="Bishkek-city">
+        <li class="bishkek-li"><h3>Bishkek:</h3></li>
+        <div class="bishkek-city">
+        <img class="city-image" src="resources/images/IMG_3142.JPG" alt="Bishkek-city">
+        <p>Bishkek, the vibrant capital of Kyrgyzstan, <br>offers a mix of Soviet-era architecture <br> and modern attractions.<br><br><br>
+          Visit Ala-Too Square, explore the city,<br> and enjoy the city’s diverse dining scene.<br>
+          <br>
+          <button>View more</button>
+        </p>
       </div>
         <li>Issyk-Kul Lake:</li>
         <li>Ala-Archa National Park</li>
@@ -132,4 +137,4 @@
     </section>
   </main>
   </body>
-</html>>
+</html> 
