--- a/index.html
+++ b/index.html
@@ -119,16 +119,30 @@
       <h2>Top destinations</h2>
       <div class="destinations">
        <ul>
-        <li class="bishkek-li"><h3>Bishkek:</h3></li>
+        <li class="bishkek-li"><h3>Bishkek: The capital city</h3></li>
         <div class="bishkek-city">
         <img class="city-image" src="resources/images/IMG_3142.JPG" alt="Bishkek-city">
-        <p>Bishkek, the vibrant capital of Kyrgyzstan, <br>offers a mix of Soviet-era architecture <br> and modern attractions.<br><br><br>
+        <img src="resources/images/IMG_8174 (1).JPG" alt="night-bishkek">
+        <img src="resources/images/IMG_3130.JPG" alt="green-bishkek">
+       <p>Bishkek, the vibrant capital of Kyrgyzstan, <br>offers a mix of Soviet-era architecture <br> and modern attractions.<br><br><br>
           Visit Ala-Too Square, explore the city,<br> and enjoy the city’s diverse dining scene.<br>
           <br>
-          <button>View more</button>
+         <!--<button class="bishkek-button">View more</button>-->
         </p>
       </div>
-        <li>Issyk-Kul Lake:</li>
+        <li class="issyk-kul-li"><h3>Issyk-Kul Lake: The Pearl of Central Asia</h3></li>
+        <div class="issyk-kul">
+          <img class="issyk-kul-img" src="resources/images/IMG_1773.JPG" alt="issyk-kul">
+          <p> 
+            Nestled in the heart of the Tian Shan mountains,<br>
+             Issyk-Kul Lake is one of Kyrgyzstan's most breathtaking natural wonders.<br>
+              Known as the "Pearl of Central Asia," <br>
+              this endorheic lake is the second-largest saline lake in the world,
+               and its beauty is unparalleled.
+               <br>
+               <button class="issyk-kul-button">View more</button>
+          </p>
+        </div>
         <li>Ala-Archa National Park</li>
         <li>Song-Kul Lake:</li>
         <li>Osh</li>
