--- a/index.html
+++ b/index.html
@@ -148,10 +148,49 @@
                <br>
                <button>View more</button>
            </p>
+       </div>
+           <div class="highlights-section">
+           <h4>Highlights of Issyk-kul</h4>
+           <ul>
+            <li><strong>Crystal Clear Waters:</strong>
+              <p>The lake's name, meaning "warm lake," reflects its unique characteristic of never freezing, <br>
+                even in the coldest winters.</p>
+            </li>
+            <li><strong>Stunning Surroundings:</strong>
+            <p>Encircled by snow-capped mountains, Issyk-Kul offers picturesque views and a serene atmosphere,<br>
+               perfect for relaxation and exploration.</p>
+            </li>
+            <li><strong>Rich History:</strong>
+              <p>The region around the lake is dotted with ancient petroglyphs, historical ruins, and cultural sites,<br>
+                 providing a glimpse into the rich heritage of the Kyrgyz people.</p>
+            </li>
+            <li><strong>Outdoor Activities:</strong>
+              <p>Whether you're into swimming, boating, hiking, or bird watching, <br>
+                Issyk-Kul has something for every nature enthusiast. The lake's pristine beaches and clear waters<br>
+                 make it a popular destination for both locals and tourists.
+              </p>
+             </li>
+             <br>
+             <h6 class="link"><a href="#">Visit Issyk-Kul Lake to experience a blend of natural beauty,<br>
+               cultural richness, and outdoor adventure.</a></h6>
+            </ul>
         </div>
-      
       </div>
-        <li>Ala-Archa National Park</li>
+        <li class="ala-archa-li"><h3>Ala-Archa National Park</h3></li>
+        <div class="ala-archa">
+          <img src="resources/images/photo1622486593.jpeg" alt="panorama">
+          <img src="resources/images/IMG_9694.JPG" alt="forest">
+          <img src="resources/images/IMG_9587.JPG" alt="clouds">
+        </div>
+        <div class="ala-archa-p">
+          <p>Located just a short drive from Bishkek,<br> 
+            Ala-Archa National Park is one of Kyrgyzstan's most stunning natural reserves.<br> 
+            This breathtaking park, situated in the rugged Kyrgyz Ala-Too range,<br>
+             is a paradise for nature lovers and adventure enthusiasts alike.
+             <br>
+             <button>View more</button>
+            </p>
+        </div>
         <li>Song-Kul Lake:</li>
         <li>Osh</li>
        </ul>
