--- a/index.html
+++ b/index.html
@@ -126,11 +126,40 @@
           <img src="resources/images/IMG_3130.JPG" alt="green-bishkek">
       </div>
       <div class="bishkek-p">
-       <p>Bishkek, the vibrant capital of Kyrgyzstan, <br>offers a mix of Soviet-era architecture <br> and modern attractions.<br><br><br>
-          Visit Ala-Too Square, explore the city,<br> and enjoy the city’s diverse dining scene.<br>
-          <br>
-         <button class="bishkek-button">View more</button>
+       <p>As the capital and largest city of Kyrgyzstan, <br>
+        Bishkek is a vibrant hub that blends modernity with rich cultural heritage. <br>
+        This bustling city offers a unique mix of Soviet-era architecture, lively markets,<br>
+         and green spaces, making it a fascinating destination for travelers.
+         <br>
         </p>
+      </div>
+      <div class="highlights-section-bishkek">
+        <h4>Highlights of Bishkek city</h4>
+        <ul>
+          <li><strong>Ala-Too Square:</strong>
+             <p>The central square of Bishkek is a must-visit. <br>
+               It features the impressive Manas Statue and is surrounded by significant buildings <br>like the State Historical Museum
+               and the Presidential House.</p>
+          </li>
+          <li><strong>Green Spaces:</strong>
+              <p>Bishkek is known for its numerous parks and tree-lined streets.<br>
+              Panfilov Park and Oak Park are popular spots for a leisurely stroll or a relaxing picnic.</p>
+         </li>
+         <li><strong>Cultural Institutions:</strong>
+              <p>The city is home to several museums and theaters, including the Kyrgyz National Museum of Fine Arts <br>
+              and the State Opera and Ballet Theatre, offering a glimpse into the country's artistic and cultural heritage.</p>
+         </li>
+         <li><strong>Dining Scene:</strong>
+             <p>Bishkek boasts a diverse and vibrant dining scene. <br>
+              From traditional Kyrgyz cuisine to international flavors, the city's restaurants and cafes cater to all tastes. <br>
+              Be sure to try local dishes like beshbarmak and manty.
+              <br>
+              <br>
+              <button>View more</button>
+            </p>
+          </li>
+         </ul>
+        </div>
       </div>
       <div>
         <li class="issyk-kul-li"><h3>Issyk-Kul Lake: The Pearl of Central Asia</h3></li>
@@ -146,10 +175,10 @@
               this endorheic lake is the second-largest saline lake in the world,
                and its beauty is unparalleled.
                <br>
-               <button>View more</button>
+               <br>
            </p>
        </div>
-           <div class="highlights-section">
+       <div class="highlights-section-issyk-kul">
            <h4>Highlights of Issyk-kul</h4>
            <ul>
             <li><strong>Crystal Clear Waters:</strong>
@@ -168,11 +197,11 @@
               <p>Whether you're into swimming, boating, hiking, or bird watching, <br>
                 Issyk-Kul has something for every nature enthusiast. The lake's pristine beaches and clear waters<br>
                  make it a popular destination for both locals and tourists.
+                 <br>
+                 <br> 
+                 <button>View more</button>
               </p>
              </li>
-             <br>
-             <h6 class="link"><a href="#">Visit Issyk-Kul Lake to experience a blend of natural beauty,<br>
-               cultural richness, and outdoor adventure.</a></h6>
             </ul>
         </div>
       </div>
