--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>kG</title>
+  <title>Visit-KG</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" >
   <link href="index.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,13 +13,13 @@
   <div class="navigation">
     <ul>
       <div class="left">
-      <li class="kg">Kyrgyzstan</li>
-      <li>Contact us</li>
+      <li class="kg">Visit-KG</li>
       </div>
       <div class="right">
       <li>About</li>
-      <li>Home</li>
       <li>Tour</li>
+      <li><a href="#contact-us"> Contact us</a></li>
+      <li>Home</li>
       </div>
        </ul>
    </div>
@@ -217,13 +217,82 @@
             This breathtaking park, situated in the rugged Kyrgyz Ala-Too range,<br>
              is a paradise for nature lovers and adventure enthusiasts alike.
              <br>
-             <button>View more</button>
             </p>
         </div>
-        <li>Song-Kul Lake:</li>
-        <li>Osh</li>
-       </ul>
+        <div class="highlights-section-alaarcha">
+          <ul>
+            <h4>Highlights of Ala-Archa National Park:</h4>
+            <li><strong>Diverse Landscapes:</strong>
+              <p>The park covers an area of over 200 square kilometers and features a rich diversity of landscapes, <br>
+                including glaciers, alpine meadows, and dense forests.</p>
+            </li>
+            <li><strong>Spectacular Hiking Trails:</strong>
+              <p>Whether you're a seasoned hiker or a casual walker, Ala-Archa offers a variety of trails.<br>
+                 Popular routes include the easy walk to the Ak-Sai Waterfall and the challenging trek to the Ak-Sai Glacier.</p>
+            </li>
+            <li><strong>Abundant Wildlife:</strong>
+              <p> Ala-Archa is home to a wide range of wildlife, including the elusive snow leopard, mountain goats, and numerous bird species.<br>
+                 Wildlife enthusiasts will find plenty to marvel at within the park.</p>
+            </li>
+            <li><strong>Climbing Opportunities:</strong>
+              <p>For those seeking a more adrenaline-fueled adventure, the park offers excellent rock climbing and mountaineering opportunities. <br>
+                The towering peaks, including the famous Peak Uchitel, attract climbers from around the world.
+                <br>
+                <br>
+                <button class="ala-archa-button">View more</button>
+              </p>
+            </li>
+          </ul>
+        </div>
+        </div>
+        <div></div>
+        <li class="song-kul-li"><h3>Song-Kul Lake: The Pristine Alpine Gem</h3></li>
+        <div class="song-kul">
+          <img src="resources/images/IMG_0744.JPG" alt="lake">
+          <img src="resources/images/IMG_0738.JPG" alt="lake">
+          <img src="resources/images/IMG_3675.JPG" alt="lake">
+        </div>
+        <div class="song-kul-p">
+        <p>Situated at an altitude of over 3,000 meters, <br>
+          Song-Kul Lake is one of Kyrgyzstan's most beautiful and serene destinations. This high-altitude lake, surrounded by rolling pastures and rugged mountains, <br>
+          offers a glimpse into the traditional nomadic lifestyle of the Kyrgyz people.<br></p>
+        </div>
+        <div class="highlights-song-kul">
+          <ul>
+            <h4>Highlights of Song-Kul Lake:</h4>
+            <li><strong>Untouched Beauty: </strong>
+              <p>Song-Kul Lake is renowned for its pristine, crystal-clear waters and untouched natural landscapes. <br>
+                The lake's tranquil setting provides a perfect escape from the hustle and bustle of modern life.</p>
+            </li>
+            <li><strong>Traditional Yurts:</strong>
+              <p>Experience authentic Kyrgyz hospitality by staying in a traditional yurt. <br>
+                Local families offer accommodations, giving visitors a unique opportunity to learn about the nomadic lifestyle and enjoy traditional meals.
+              </p>
+            </li>
+            <li><strong>Stunning Sunrises and Sunsets:</strong>
+              <p>he high altitude and clear skies at Song-Kul make for breathtaking sunrises and sunsets. <br>
+                The reflections on the lake's surface create stunning photographic opportunities.</p>
+            </li>
+            <li><strong>Wildlife and Bird Watching:</strong>
+              <p>The lake and its surroundings are home to a variety of wildlife, including marmots, yaks, and numerous bird species. <br>
+                Bird watchers will delight in spotting rare and migratory birds.
+                <br>
+                <br>
+                <button>View more</button>
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      </ul>
     </div>
+    </section>
+    <section>
+      <footer>
+        <p id="contact-us">contacts:</p>
+        <p>email:tuesday.20@icloud.com</p>
+        <p>phone number: +19412469918</p>
+      </footer>
     </section>
   </main>
   </body>
