--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
   <main>
     <header>
     <h1>Kyrgyzstan</h1>
-      <p>Explore the beauty and culture of Central Asia's hidden gem.</p>
+      <p class="intro">Known as the "Switzerland of Central Asia,"<br>
+        Explore the beauty and culture of Central Asia's hidden gem.<br>
+      From the ancient Silk Road cities to the traditional nomadic yurts dotting the countryside<br>
+      Beyond its natural wonders, the country boasts a vibrant tapestry of nomadic traditions, hospitable people, and a history that stretches back millennia.
+      </p>
       <p id="scroll-right">scroll >>></p>
     </header>
     <!--images section-->
