--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
         <p id="contact-us">contacts:</p>
         <p>email:tuesday.20@icloud.com</p>
         <p>phone number: +19412469918</p>
+        <p>adress: Sovetskaya st 205</p>
       </footer>
     </section>
   </main>
