--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
         <p>email:tuesday.20@icloud.com</p>
         <p>phone number: +19412469918</p>
         <p>adress: Sovetskaya st 205</p>
+          <div class="footer-left">
       </footer>
     </section>
   </main>
