--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
         <p>email:tuesday.20@icloud.com</p>
         <p>phone number: +19412469918</p>
         <p>adress: Sovetskaya st 205</p>
-          <div class="footer-left">
+        <div class="footer-left">
+        <p class="copyright">Copy Right</p>
       </footer>
     </section>
   </main>
