--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
         <p>adress: Sovetskaya st 205</p>
         <div class="footer-left">
         <p class="copyright">Copy Right</p>
+        <p>2024 Vist-kg</p>
       </footer>
     </section>
   </main>
