--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
         <div class="footer-left">
         <p class="copyright">Copy Right</p>
         <p>2024 Vist-kg</p>
+        </div>
       </footer>
     </section>
   </main>
