--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="right">
       <li>About</li>
-      <li>Tour</l>
+      <li>Tour</li>
       <li><a href="#contact-us"> Contact us</a></li>
       <li>Home</li>
       </div>
